# swarm-tips

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  SKILL.md  STATUS.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: _deploy-service.yml  coordination-game.yml  mcp-server.yml  program.yml  shillbot-program.yml
circuits/bool_range/: bool_range.circom  export_vk.js  package.json  setup.sh  verifying_key.json  verifying_key.rs
circuits/bool_range/bool_range_js/: bool_range.wasm
crates/game-api-client/: Cargo.toml
crates/game-api-client/src/: lib.rs  ws.rs
crates/game-chain/: Cargo.toml
crates/game-chain/src/: client.rs  commit.rs  instructions.rs  lib.rs  pda.rs
crates/shared/: Cargo.toml
crates/shared/src/: constants.rs  lib.rs  platform.rs  scoring.rs
docs/analysis/: 2026-04-07-arbitrage-survey.md  2026-04-07-defillama-discovery-survey.md  2026-04-08-pulsemcp-earning-sweep.md  2026-04-08-round-2-polish-survey.md  2026-04-08-unified-list-tools-strategic-shift.md
docs/outreach/: bountycaster-launch-2026-04-07.md  dns-records-namecheap.md  operator-dm-list-2026-04-07.md  pulsemcp-2026-04-07.md  secondary-directories.md
infra/k8s/mcp-server/: backendpolicy.yaml  deployment.yaml  healthcheckpolicy.yaml  httproute.yaml  service.yaml
migrations/: deploy.ts
programs/coordination/: Cargo.toml  build.rs
programs/coordination-game/: CLAUDE.md  Cargo.toml
programs/coordination-game/src/: errors.rs  events.rs  lib.rs
programs/coordination-game/src/instructions/: claim_reward.rs  create_game.rs  create_game_session.rs  create_tournament.rs  finalize_tournament.rs  join_game.rs  join_game_session.rs  mod.rs  resolve_timeout.rs  reveal_guess.rs  reveal_guess_session.rs  update_config.rs  utils.rs  withdraw_stake.rs
programs/coordination-game/src/state/: game.rs  session.rs  tournament.rs
programs/coordination/src/: errors.rs  events.rs  lib.rs  payoff.rs  zk.rs
programs/coordination/src/instructions/: claim_reward.rs  commit_guess.rs  create_game.rs  create_tournament.rs  deposit_stake.rs  finalize_tournament.rs  join_game.rs  mod.rs  resolve_timeout.rs  reveal_guess.rs  utils.rs
programs/coordination/src/state/: escrow.rs  game.rs  mod.rs  player.rs
programs/shillbot/: CLAUDE.md  Cargo.toml
programs/shillbot/src/: constants.rs  errors.rs  events.rs  lib.rs  scoring.rs
programs/shillbot/src/instructions/: approve_task.rs  challenge_task.rs  claim_task.rs  claim_task_session.rs  create_session.rs  create_task.rs  emergency_return.rs  expire_task.rs  finalize_task.rs  initialize.rs  mod.rs  register_identity.rs  resolve_challenge.rs  revoke_session.rs  set_switchboard_feed.rs  submit_work.rs  submit_work_session.rs  transfer_authority.rs  update_oracle_authority.rs  update_params.rs  update_treasury.rs  verify_task.rs
programs/shillbot/src/state/: agent.rs  challenge.rs  client.rs  global.rs  mod.rs  task.rs
sdk/: .npmrc  coordination.ts  package.json
services/coordination-mcp-server/: CLAUDE.md  Cargo.toml  Dockerfile  server.json
services/coordination-mcp-server/src/: game_proxy.rs  game_session.rs  main.rs  proxy.rs  session.rs  tools.rs
services/listings-scraper/: Cargo.toml
services/listings-scraper/src/: main.rs
services/mcp-server/: .deploy-trigger  CLAUDE.md  Cargo.toml  Dockerfile  server.json
services/mcp-server/examples/: sign_tx.rs
services/mcp-server/scripts/: build-verify-tx.ts  package.json
services/mcp-server/src/: auth.rs  botbounty_proxy.rs  clawtasks_proxy.rs  config.rs  errors.rs  game_proxy.rs  game_session.rs  main.rs  proxy.rs  server.rs  session_binding.rs  solana_tx.rs
services/mcp-server/src/discovery/: classify.rs  deep_analysis.rs  llm_classify.rs  merge.rs  mod.rs  models.rs  sources.rs
services/mcp-server/src/discovery/prompts/: discovery_classify.txt
services/mcp-server/src/listings/: filters.rs  mod.rs  models.rs  sources.rs  spending.rs
tests/: coordination-game.ts  coordination.ts  shillbot-lifecycle.ts  shillbot.ts
tests/helpers/: mock-switchboard-feed.ts
