[package]
name = "coordination-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coordination-mcp-server"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
rust-mcp-sdk = { version = "0.9", features = ["server"] }
async-trait = "0.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
game-api-client = { workspace = true }
game-chain = { workspace = true }
futures-util = "0.3"
solana-sdk = "2.2"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
bincode = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
