[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
schemars = "1.0"
axum = "0.8"
tokio-util = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
firestore = "0.48"
game-api-client = { workspace = true }
game-chain = { workspace = true }
futures-util = "0.3"
solana-sdk = "2.2"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bincode = "1"
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
