[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
rmcp = { version = "1.3", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
schemars = "1.0"
axum = "0.8"
http = "1"
tokio-util = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# Pinned (not workspace) so we can swap the TLS backend to rustls. The
# default reqwest `native-tls` backend links openssl-sys, and rquest's
# boring-sys2 ships its own static libssl.a that the linker prefers via
# Cargo's -L ordering — which makes native_tls's calls to OpenSSL-only
# symbols (SSL_CTX_ctrl, SSL_get1_peer_certificate, SSL_write_ex, ...)
# resolve into BoringSSL's stripped libssl and fail to link. rustls is
# pure-Rust, has no -lssl footprint, and coexists with rquest+BoringSSL
# cleanly.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# rquest 3.0.0 — reqwest-API-compatible client that emits a real browser's
# TLS/JA3 + HTTP/2 fingerprint via BoringSSL. Used ONLY by the listings
# scraper (services/mcp-server/src/listings/) to bypass Cloudflare's
# TLS-handshake fingerprint block on api.moltlaunch.com — Phase 1 IP
# rotation confirmed (2026-04-29) the block is fingerprint-level, not
# IP-level. Pinned to =3.0.0: it's the last non-yanked release where
# Impersonate::Chrome131 lives in the Apache-2.0 main crate; 4.x onward
# moved the enum into the GPL-3.0 `rquest-util` sibling, and 2.x is fully
# yanked upstream. Pulls BoringSSL — adds cmake to the build image.
rquest = { version = "=3.0.0", features = ["json", "gzip", "brotli", "deflate"] }
firestore = "0.48"
gcloud-sdk = { version = "0.29", features = ["google-cloud-secretmanager-v1"] }
game-api-client = { workspace = true }
game-chain = { workspace = true }
futures-util = "0.3"
solana-sdk = "2.2"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bincode = "1"
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
